--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ dist/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
+
+# More Dependency directorys
+package-lock.json
+
+# vs code
+.vscode
