Set up early koa server
Might not be handling requests right

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "type": "git",
     "url": "git+https://github.com/spotifred/spotifred.git"
   },
-  "keywords": ["spotifred"],
+  "keywords": [
+    "spotifred"
+  ],
   "author": "spotifred-team",
   "license": "MIT",
   "dependencies": {
     "fs": "0.0.1-security",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
+    "koa-morgan": "^1.0.1",
+    "koa-response-time": "^2.0.0",
     "koa-router": "^7.4.0",
     "path": "^0.12.7",
     "pg": "^7.4.1"
