--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/spotifred/spotifred.git"
   },
-  "keywords": ["spotifred"],
+  "keywords": [
+    "spotifred"
+  ],
   "author": "spotifred-team",
   "license": "MIT",
   "dependencies": {
@@ -24,6 +26,7 @@
     "koa-morgan": "^1.0.1",
     "koa-response-time": "^2.0.0",
     "koa-router": "^7.4.0",
+    "newrelic": "^2.7.0",
     "path": "^0.12.7",
     "pg": "^7.4.1"
   },
