--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "Faker": "^0.7.2",
+    "chai": "^4.1.2",
     "concat-files": "^0.1.1",
     "csv-writer": "0.0.3",
     "fs": "0.0.1-security",
@@ -26,6 +27,7 @@
     "koa-morgan": "^1.0.1",
     "koa-response-time": "^2.0.0",
     "koa-router": "^7.4.0",
+    "mocha": "^5.0.0",
     "newrelic": "^2.7.0",
     "path": "^0.12.7",
     "pg": "^7.4.1"
