(Refactor) Convert to process.env vars

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spotifred",
   "version": "1.0.0",
   "description": "Spotifred services unite!",
-  "main": "client/index.js",
+  "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,9 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/spotifred/spotifred.git"
   },
-  "keywords": [
-    "spotifred"
-  ],
+  "keywords": ["spotifred"],
   "author": "spotifred-team",
   "license": "MIT",
   "dependencies": {
@@ -21,6 +19,7 @@
     "chai": "^4.1.2",
     "concat-files": "^0.1.1",
     "csv-writer": "0.0.3",
+    "dotenv": "^5.0.0",
     "fs": "0.0.1-security",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
