--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "type": "git",
     "url": "git+https://github.com/spotifred/spotifred.git"
   },
-  "keywords": ["spotifred"],
+  "keywords": [
+    "spotifred"
+  ],
   "author": "spotifred-team",
   "license": "MIT",
   "dependencies": {
     "Faker": "^0.7.2",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "concat-files": "^0.1.1",
     "csv-writer": "0.0.3",
     "dotenv": "^5.0.0",
