--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mocha": "^5.0.0",
     "newrelic": "^2.7.0",
     "path": "^0.12.7",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "siege": "^0.2.0"
   },
   "bugs": {
     "url": "https://github.com/spotifred/spotifred/issues"
