--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "spotifred",
   "version": "1.0.0",
   "description": "Spotifred services unite!",
-  "main": "client/index.js",
+  "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/spotifred/spotifred.git"
   },
-  "keywords": [
-    "spotifred"
-  ],
+  "keywords": ["spotifred"],
   "author": "spotifred-team",
   "license": "MIT",
   "dependencies": {
     "Faker": "^0.7.2",
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "concat-files": "^0.1.1",
     "csv-writer": "0.0.3",
+    "dotenv": "^5.0.0",
     "fs": "0.0.1-security",
     "koa": "^2.4.1",
     "koa-body": "^2.5.0",
@@ -30,7 +30,8 @@
     "mocha": "^5.0.0",
     "newrelic": "^2.7.0",
     "path": "^0.12.7",
-    "pg": "^7.4.1"
+    "pg": "^7.4.1",
+    "siege": "^0.2.0"
   },
   "bugs": {
     "url": "https://github.com/spotifred/spotifred/issues"
