--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
-    "test": "mocha"
+    "test": "mocha --exit",
+    "test-coverage":
+      "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --exit test/*.js --timeout=3000",
+    "start-dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "Faker": "^0.7.2",
+    "aws-sdk": "^2.192.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "concat-files": "^0.1.1",
@@ -31,10 +35,24 @@
     "newrelic": "^2.7.0",
     "path": "^0.12.7",
     "pg": "^7.4.1",
-    "siege": "^0.2.0"
+    "siege": "^0.2.0",
+    "sqs-consumer": "^3.8.0"
   },
   "bugs": {
     "url": "https://github.com/spotifred/spotifred/issues"
   },
-  "homepage": "https://github.com/spotifred/spotifred#readme"
+  "homepage": "https://github.com/spotifred/spotifred#readme",
+  "devDependencies": {
+    "babel-plugin-istanbul": "^4.1.5",
+    "babel-register": "^6.26.0",
+    "nodemon": "^1.14.12",
+    "nyc": "^11.4.1"
+  },
+  "nyc": {
+    "include": ["database/**/*.js", "server/**/*.js"],
+    "exclude": ["**/test/**/*", "packages/**/*"],
+    "sourceMap": false,
+    "instrument": false,
+    "all": false
+  }
 }
